<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Ejercicio405">

    <TextView android:text="@string/tvDni" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDni" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edDni"
        android:layout_below="@+id/tvDni"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:numeric="integer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNombre"
        android:id="@+id/tvNombre"
        android:layout_below="@+id/edDni"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edNombre"
        android:layout_below="@+id/tvNombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edDni"
        android:layout_alignEnd="@+id/edDni" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvColegio"
        android:id="@+id/tvColegio"
        android:layout_below="@+id/edNombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edColegio"
        android:layout_below="@+id/tvColegio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edNombre"
        android:layout_alignEnd="@+id/edNombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMesa"
        android:id="@+id/tvMesa"
        android:layout_below="@+id/edColegio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edMesa"
        android:layout_below="@+id/tvMesa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:numeric="integer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAlta"
        android:id="@+id/btnAlta"
        android:layout_below="@+id/edMesa"
        android:layout_toRightOf="@+id/tvDni"
        android:layout_toEndOf="@+id/tvDni"
        android:layout_marginTop="26dp"
        android:onClick="alta" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btConsulta"
        android:id="@+id/btnConsulta"
        android:layout_alignBottom="@+id/btnAlta"
        android:layout_toRightOf="@+id/btnAlta"
        android:layout_toEndOf="@+id/btnAlta"
        android:onClick="consulta" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btModificar"
        android:id="@+id/btnModificar"
        android:layout_below="@+id/btnAlta"
        android:layout_alignLeft="@+id/btnAlta"
        android:layout_alignStart="@+id/btnAlta"
        android:onClick="modificar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btBorrar"
        android:id="@+id/btnBorrar"
        android:layout_below="@+id/btnConsulta"
        android:layout_toRightOf="@+id/btnModificar"
        android:layout_alignRight="@+id/btnConsulta"
        android:layout_alignEnd="@+id/btnConsulta"
        android:onClick="borrar" />

</RelativeLayout>
